Inclusion de l'analyse des proprietes mathematiques du modele (positivite, ...)

--- a/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
@@ -1,6 +1,6 @@
 \documentclass[main.tex]{subfiles}
 \begin{document}
-\chapter{Ananlyse de mélanges bi-gaussien \label{chap:anx_gmm}}
+\chapter{Analyse de mélanges bi-gaussien \label{chap:anx_gmm}}
 \mylettrine{D}{ans} tout ce chapitre dédié à l'analyse d'un mélange bi-gaussien sous toutes les coutures, nous considèrerons les mêmes notations que celles utilisées dans le chapitre~\ref{chap:crit_hetero}.
 
 \section{Propriétés d'une gaussienne}
