--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -76,6 +76,9 @@
 
 \usepackage{mathabx} %% Pour avoir proprement le grand symbole \sqrt notamment
 \usepackage{mathtools}
+%%\usepackage{mathstyle} %%% Produit une erreur ...
+%%\usepackage[overload]{empheq} %%% Etend les environnement align avec des arguments optionnels que l'on peut donner entre crochets.
+\usepackage{empheq}
 \usepackage{caption} %% Permet d'utiliser \captionof sans etre dans un environnement figure
 \usepackage{subfig}%% \subfloat
 \usepackage{wrapfig}%% \begin{wrapfigure}
@@ -94,6 +97,7 @@
 %%%% http://texdoc.net/texmf-dist/doc/latex/datatool/datatool-user.pdf
 \usepackage{pict2e}
 \usepackage{slashbox}
+\usepackage{cases}%%% Pour ecriture des systeme d'equations avec subnumcase
 \usepackage{xfrac}
 \usepackage{hhline}
 \usepackage{spreadtab}
