--- a/manuscrit_G_LEFEBVRE/mes_macros.tex
+++ b/manuscrit_G_LEFEBVRE/mes_macros.tex
@@ -11,6 +11,9 @@
 \newcommand{\ie}{{\it i.e.}\xspace}
 \newcommand{\cf}{{\it cf.}\xspace}
 \newcommand{\etal}{{\it et al.}\xspace}
+
+\newcommand{\intx}{\int_\Omega}
+\newcommand{\intbord}{\int_{\partial \Omega}}
 \newcommand{\dvecx}{\;{\rm d}\vecx\xspace}
 \newcommand{\dx}{\;{\rm d}x\xspace}
 \newcommand{\dy}{\;{\rm d}y\xspace}
