--- a/manuscrit_G_LEFEBVRE/remerciements.tex
+++ b/manuscrit_G_LEFEBVRE/remerciements.tex
@@ -12,8 +12,9 @@ Je remercie Hassan Fathallah-Shaykh, professeur de l'université de l'Alabama à
 
 Je remercie également Patricio Cumsille, chercheur de l'université du Biobío (Chili) et de l'université du Chili (Santiago, Chili), pour sa collaboration. Il a étudié avec moi, lors de sa visite d'un an en France, au sein de notre équipe de recherche, un modèle qui donne suite à celui présenté dans ce manuscrit. 
 
-Je remercie aussi, l'ensemble des personnes avec qui j'ai pu tour à tour partager un bureau. Michaël Leguèbe, Julie Joie, Manon Deville et Guillaume Dechristé notamment, pour l'intérêt porté à mes questions ouvertes et les réponses qu'ils ont apportées.
+Je remercie aussi, l'ensemble des personnes avec qui j'ai pu tour à tour partager un bureau. Michaël Leguèbe, Julie Joie, Manon Deville, Thibaut Kritter et Guillaume Dechristé notamment, pour l'intérêt porté à mes questions ouvertes et les réponses qu'ils ont apportées.
 
 Je remercie également l'ensemble des doctorants de l'équipe MC2, récemment divisé en 2 nouvelles équipes (MEMPHYS et MONC), qui au fil du temps sont devenus bien plus que de simple collègue, en particulier Hervé Ung, Alexia de Brauer, Thomas Michel, Etienne Baratchart et Alice Raeli. Les diverses débats abordés et expériences partagées avec eux, scientifiques ou non d'ailleurs, ont été une occasion de se cultiver toujours un peu plus.
 
-Je remercie également l'ensemble des bonnes volontés qui ont consacré de leur temps pour relire tout ou partie de mon manuscrit, et d'en avoir  déceler les fautes et coquilles en tout genre.
+Je remercie également l'ensemble des bonnes volontés qui ont consacré de leur temps pour relire tout ou partie de mon manuscrit, et d'en avoir déceler les fautes et coquilles en tout genre. 
+%Merci notamment à Vinciane, Cynthia
